tests/paczka1/small_fuzzy/40467814.err
Error in line 4: PAgP0 S490 57,7
Error in line 1: ga4Xw3Uq S1 48,0
Error in line 14: S1 S1 72,8
